--- a/Seaside/JSJsonParser.cls
+++ b/Seaside/JSJsonParser.cls
@@ -6,5 +6,5 @@ WAJsonParser subclass: #JSJsonParser
 	poolDictionaries: ''
 	classInstanceVariableNames: ''!
 JSJsonParser guid: (GUID fromString: '{57ecfa60-03ce-4eb8-8d43-e4707ba5d7a0}')!
-JSJsonParser comment: 'WAError subclass: #WAJsonSyntaxError	instanceVariableNames: ''''	classVariableNames: ''''	poolDictionaries: ''''	category: ''Seaside-JSON-Core'''!
+JSJsonParser comment: 'WAError subclass: #WAJsonSyntaxError	instanceVariableNames: ''''	classVariableNames: ''''	package: ''Seaside-JSON-Core'''!
 !JSJsonParser categoriesForClass!Seaside-JSON-Core! !
