--- a/Seaside/WAAnchorTag.cls
+++ b/Seaside/WAAnchorTag.cls
@@ -38,6 +38,14 @@ tag	^ 'a'!
 
 target: aString 	"This attribute specifies the name of a frame where a document is to be opened."		self attributes at: 'target' put: aString!
 
+targetBlank	"Load the URL into a new browsing context. This is usually a tab, but users can configure browsers to use new windows instead.		WARNING:	Use with parcimonie. It goes against web development best practices to force the user to open the link in a new tab. Usually your should let the user decide how he wants to open a link.		Linking to another page using target=""_blank"" will run the new page on the same process as your page. If the new page is executing expensive JS, your page's performance may suffer. To avoid this use rel=""noopener""."	self target: '_blank'!
+
+targetParent	"Load the URL into the parent browsing context of the current one. If there is no parent, this behaves the same way as _self."	self target: '_parent'!
+
+targetSelf	"Load the URL into the same browsing context as the current one. This is the default behavior."	self target: '_self'!
+
+targetTop	" Load the URL into the top-level browsing context (that is, the «highest» browsing context that is an ancestor of the current one, and has no parent). If there is no parent, this behaves the same way as _self."	self target: '_top'!
+
 type: aString	"This attribute gives an advisory hint as to the content type of the content available at the link target address. It allows user agents to opt to use a fallback mechanism rather than fetch the content if they are advised that they will get content in a content type they do not support."		self attributes at: 'type' put: aString!
 
 url	^ url ifNil: [ url := canvas actionUrl copy ]!
@@ -61,6 +69,10 @@ with: aBlock	url isNil		ifFalse: [ self attributes at: 'href' put: url ].	sup
 !WAAnchorTag categoriesFor: #reverse:!attributes!public! !
 !WAAnchorTag categoriesFor: #tag!accessing!public! !
 !WAAnchorTag categoriesFor: #target:!attributes!public! !
+!WAAnchorTag categoriesFor: #targetBlank!public!target! !
+!WAAnchorTag categoriesFor: #targetParent!public!target! !
+!WAAnchorTag categoriesFor: #targetSelf!public!target! !
+!WAAnchorTag categoriesFor: #targetTop!public!target! !
 !WAAnchorTag categoriesFor: #type:!attributes!public! !
 !WAAnchorTag categoriesFor: #url!accessing!public! !
 !WAAnchorTag categoriesFor: #url:!accessing!public! !
