--- a/Seaside/WACheckboxTag.cls
+++ b/Seaside/WACheckboxTag.cls
@@ -12,9 +12,9 @@ WACheckboxTag comment: 'The checkbox element is used with an associated property
 
 after	super after.	callback isNil ifTrue: [ ^ self ].	canvas hiddenInput 		callback: [			callback value: value.			value := false ]!
 
-callback: aBlock	"Compared to other form elements this input element is disabled then the callback will still be evaluted but with an argument that is false. So either don't assign a callback to disabled checkboxes or make the callback code aware that he might be invoked in a disabled state.		However if you enable a disabled checkbox with JavaScript then the callback is invoked with the correct argument.		http://code.google.com/p/seaside/issues/detail?id=18"	value := false.	callback := aBlock fixCallbackTemps.	super callback: [ value := true ]!
+callback: aBlock	"Compared to other form elements this input element is disabled then the callback will still be evaluted but with an argument that is false. So either don't assign a callback to disabled checkboxes or make the callback code aware that he might be invoked in a disabled state.		However if you enable a disabled checkbox with JavaScript then the callback is invoked with the correct argument.		http://code.google.com/p/seaside/issues/detail?id=18"	value := false.	callback := aBlock.	super callback: [ value := true ]!
 
-onTrue: trueBlock onFalse: falseBlock	trueBlock fixCallbackTemps. falseBlock fixCallbackTemps.	self callback: [ :v | v ifTrue: [ trueBlock value ] ifFalse: [ falseBlock value ] ]!
+onTrue: trueBlock onFalse: falseBlock	self callback: [ :v | v ifTrue: [ trueBlock value ] ifFalse: [ falseBlock value ] ]!
 
 type	^ 'checkbox'!
 
