--- a/Seaside/WACollectionTag.cls
+++ b/Seaside/WACollectionTag.cls
@@ -24,7 +24,7 @@ isSelected: anObject	"Test if anObject is currently selected." 	^ selected = 
 
 labelForOption: anObject	^ labelBlock isNil		ifTrue: [ anObject ]		ifFalse: [ labelBlock value: anObject ]!
 
-labels: aBlock	"Allows to customize the rendering of list items by passing a one argument block that converts each option to a string. If you need to do custom html rendering for the options use #with: or override #renderOn: in your objects."	labelBlock := aBlock fixCallbackTemps!
+labels: aBlock	"Allows to customize the rendering of list items by passing a one argument block that converts each option to a string. If you need to do custom html rendering for the options use #with: or override #renderOn: in your objects."	labelBlock := aBlock!
 
 list	^ list ifNil: [ list := OrderedCollection new ]!
 
