--- a/Seaside/WACurrentExceptionHandler.cls
+++ b/Seaside/WACurrentExceptionHandler.cls
@@ -6,5 +6,5 @@ WADynamicVariable subclass: #WACurrentExceptionHandler
 	poolDictionaries: ''
 	classInstanceVariableNames: ''!
 WACurrentExceptionHandler guid: (GUID fromString: '{e7a2e4b0-76dc-481f-95b3-ffdcf3d3aa05}')!
-WACurrentExceptionHandler comment: 'WASystemConfiguration subclass: #WAExceptionFilterConfiguration	instanceVariableNames: ''''	classVariableNames: ''''	poolDictionaries: ''''	category: ''Seaside-Core-Filter'''!
+WACurrentExceptionHandler comment: 'WASystemConfiguration subclass: #WAExceptionFilterConfiguration	instanceVariableNames: ''''	classVariableNames: ''''	package: ''Seaside-Core-Filter'''!
 !WACurrentExceptionHandler categoriesForClass!Seaside-Core-Filter! !
