--- a/Seaside/WADatalistTag.cls
+++ b/Seaside/WADatalistTag.cls
@@ -16,7 +16,7 @@ tag	^ 'datalist'!
 
 valueFor: anObject	^ valueBlock isNil		ifTrue: [ anObject ]		ifFalse: [ valueBlock value: anObject ]!
 
-values: aBlock	"Allows to customize the rendering of list items by passing a one argument block that converts each option to a string for use in the 'value' attribute. If you need to do more customized html rendering for the options use #with: or override #renderOn: in your objects."	valueBlock := aBlock fixCallbackTemps! !
+values: aBlock	"Allows to customize the rendering of list items by passing a one argument block that converts each option to a string for use in the 'value' attribute. If you need to do more customized html rendering for the options use #with: or override #renderOn: in your objects."	valueBlock := aBlock! !
 !WADatalistTag categoriesFor: #renderListItem:labelled:!private! !
 !WADatalistTag categoriesFor: #tag!accessing!public! !
 !WADatalistTag categoriesFor: #valueFor:!private! !
