--- a/Seaside/WADynamicVariable.cls
+++ b/Seaside/WADynamicVariable.cls
@@ -6,5 +6,5 @@ GRDynamicVariable subclass: #WADynamicVariable
 	poolDictionaries: ''
 	classInstanceVariableNames: ''!
 WADynamicVariable guid: (GUID fromString: '{a2e643c9-825b-4f78-a013-007f81db910e}')!
-WADynamicVariable comment: 'WAObject subclass: #WAKeyGenerator	instanceVariableNames: ''generator space''	classVariableNames: ''''	poolDictionaries: ''''	category: ''Seaside-Core-Utilities'''!
+WADynamicVariable comment: 'WAObject subclass: #WAKeyGenerator	instanceVariableNames: ''generator space''	classVariableNames: ''''	package: ''Seaside-Core-Utilities'''!
 !WADynamicVariable categoriesForClass!Seaside-Core-Utilities! !
