--- a/Seaside/WAFileHandlerTest.cls
+++ b/Seaside/WAFileHandlerTest.cls
@@ -18,7 +18,7 @@ newHandler	^ WAFileHandler new!
 
 testHandleDoesNotExist	| response |	self requestContextWithUrl: '/root/files/Cheeseburger/'.	response := self responseAfter: [ handler handle: self requestContext ].	self assertNotExisiting: response.		self requestContextWithUrl: '/root/files/Cheeseburger'.	response := self responseAfter: [ handler handle: self requestContext ].	self assertNotExisiting: response.		self requestContextWithUrl: '/root/files/WAStandardFiles/cheeseburger.jpeg'.	response := self responseAfter: [ handler handle: self requestContext ].	self assertNotExisiting: response!
 
-testHandleFileRequest	| response |	self requestContextWithUrl: '/root/files/WATestingFiles/sample.js'.	self requestContext consumer next; next.	response := self responseAfter: [ handler handle: self requestContext ].	self assert: response status = 200.	self assert: response contentType main = 'application'.	self assert: response contentType sub = 'x-javascript'.	self assert: response contents = WATestingFiles new sampleJs!
+testHandleFileRequest	| response |	self requestContextWithUrl: '/root/files/WATestingFiles/sample.js'.	self requestContext consumer next; next.	response := self responseAfter: [ handler handle: self requestContext ].	self assert: response status = 200.	self assert: response contentType main = 'application'.	self assert: response contentType sub = 'javascript'.	self assert: response contents = WATestingFiles new sampleJs!
 
 testHandleListing	| response |	self requestContextWithUrl: '/root/files/WATestingFiles/'.	requestContext consumer next; next.	response := self responseAfter: [ handler handle: self requestContext ].	self assertListing: response.		self requestContextWithUrl: '/root/files/WATestingFiles'.	requestContext consumer next; next.	response := self responseAfter: [ handler handle: self requestContext ].	self assertListing: response.		self requestContextWithUrl: '/root/files/'.	requestContext consumer next; next.	response := self responseAfter: [ handler handle: self requestContext ].	self assertListing: response.		self requestContextWithUrl: '/root/files'.	requestContext consumer next; next.	response := self responseAfter: [ handler handle: self requestContext ].	self assertListing: response!
 
