--- a/Seaside/WAMaximumNumberOfSessionsExceededError.cls
+++ b/Seaside/WAMaximumNumberOfSessionsExceededError.cls
@@ -6,5 +6,5 @@ WAError subclass: #WAMaximumNumberOfSessionsExceededError
 	poolDictionaries: ''
 	classInstanceVariableNames: ''!
 WAMaximumNumberOfSessionsExceededError guid: (GUID fromString: '{2d54ef49-1b55-4d06-beab-31574f3bc049}')!
-WAMaximumNumberOfSessionsExceededError comment: 'WACache subclass: #WAMutualExclusionCache	instanceVariableNames: ''mutex cache''	classVariableNames: ''''	poolDictionaries: ''''	category: ''Seaside-Core-Cache'''!
+WAMaximumNumberOfSessionsExceededError comment: 'WACache subclass: #WAMutualExclusionCache	instanceVariableNames: ''mutex cache''	classVariableNames: ''''	package: ''Seaside-Core-Cache'''!
 !WAMaximumNumberOfSessionsExceededError categoriesForClass!Seaside-Core-Cache! !
