--- a/Seaside/WARequestContextNotFound.cls
+++ b/Seaside/WARequestContextNotFound.cls
@@ -6,5 +6,5 @@ WAError subclass: #WARequestContextNotFound
 	poolDictionaries: ''
 	classInstanceVariableNames: ''!
 WARequestContextNotFound guid: (GUID fromString: '{a7f082c0-3445-46aa-bf53-adc02b0561ae}')!
-WARequestContextNotFound comment: 'WANotification subclass: #WAResponseNotification	instanceVariableNames: ''''	classVariableNames: ''''	poolDictionaries: ''''	category: ''Seaside-Core-Exceptions'''!
+WARequestContextNotFound comment: 'WANotification subclass: #WAResponseNotification	instanceVariableNames: ''''	classVariableNames: ''''	package: ''Seaside-Core-Exceptions'''!
 !WARequestContextNotFound categoriesForClass!Seaside-Core-Exceptions! !
