--- a/Seaside/WARequestTest.cls
+++ b/Seaside/WARequestTest.cls
@@ -16,6 +16,10 @@ test11	| request |	request := WARequest method: 'GET' uri: '/' version: WAHttp
 
 testBasicAuthorisation	| request headers |	request := WARequest method: 'GET' uri: '/foo?bar=1'.	headers := Dictionary new.	headers at: 'authorization' put: 'Basic QWxhZGRpbjpvcGVuIHNlc2FtZQ=='.	request setHeaders: headers.		self assert: request authorization = 'Aladdin:open sesame'.	self assert: request user = 'Aladdin'.	self assert: request password = 'open sesame'!
 
+testForwarded	| request headers |	request := WARequest method: 'GET' uri: '/foo?bar=1'.	headers := Dictionary new.	headers at: 'forwarded' put: 'For="[2001:db8:cafe::17]:4711"'.	request setHeaders: headers.		self assert: request forwarded = 'For="[2001:db8:cafe::17]:4711"'!
+
+testForwardedFor	| request headers |	request := WARequest method: 'GET' uri: '/foo?bar=1'.	headers := Dictionary new.	request setHeaders: headers.		headers at: 'forwarded' put: 'For="[2001:db8:cafe::17]:4711"'.	self assert: request forwardedFor equals: '"[2001:db8:cafe::17]:4711"'.	headers at: 'forwarded' put: 'for=192.0.2.60;proto=http;by=203.0.113.43'.	self assert: request forwardedFor equals: '192.0.2.60'.	headers at: 'forwarded' put: 'for=192.0.2.43, for=198.51.100.17'.	self assert: request forwardedFor equals: '192.0.2.43'!
+
 testIsPrefetch	| request headers |	request := WARequest method: 'GET' uri: '/foo'.	self deny: request isPrefetch.		headers := Dictionary new.	headers at: 'x-moz' put: 'prefetch'.	request setHeaders: headers.	self assert: request isPrefetch!
 
 testIsSsl	| request |	request := WARequest		method: 'GET'		uri: ('/' seasideUrl			scheme: 'https';			yourself)		version: WAHttpVersion http11.		self assert: request isGet.	self assert: request isHttp11.	self assert: request isSsl!
@@ -24,6 +28,8 @@ testPostFields	| request headers |	request := WARequest method: 'POST' uri: '/
 !WARequestTest categoriesFor: #test10!public!tests! !
 !WARequestTest categoriesFor: #test11!public!tests! !
 !WARequestTest categoriesFor: #testBasicAuthorisation!public!tests! !
+!WARequestTest categoriesFor: #testForwarded!public!tests! !
+!WARequestTest categoriesFor: #testForwardedFor!public!tests! !
 !WARequestTest categoriesFor: #testIsPrefetch!public!tests! !
 !WARequestTest categoriesFor: #testIsSsl!public!tests! !
 !WARequestTest categoriesFor: #testPostFields!public!tests! !
