--- a/Seaside/WATestError.cls
+++ b/Seaside/WATestError.cls
@@ -6,5 +6,5 @@ GRError subclass: #WATestError
 	poolDictionaries: ''
 	classInstanceVariableNames: ''!
 WATestError guid: (GUID fromString: '{9976cf95-0973-4907-b634-36c7d278b9d3}')!
-WATestError comment: 'TestCase subclass: #WARenderContextTest	instanceVariableNames: ''''	classVariableNames: ''''	poolDictionaries: ''''	category: ''Seaside-Tests-Core-Rendering'''!
+WATestError comment: 'TestCase subclass: #WACacheTest	instanceVariableNames: ''cache''	classVariableNames: ''''	package: ''Seaside-Tests-Core-Cache'''!
 !WATestError categoriesForClass!Seaside-Tests-Core-Base! !
