--- a/Seaside/WAValidationNotification.cls
+++ b/Seaside/WAValidationNotification.cls
@@ -6,5 +6,5 @@ WANotification subclass: #WAValidationNotification
 	poolDictionaries: ''
 	classInstanceVariableNames: ''!
 WAValidationNotification guid: (GUID fromString: '{d42884b1-c3d7-4a1f-8329-eaba166733df}')!
-WAValidationNotification comment: 'WADecoration subclass: #WAWidgetDecoration	instanceVariableNames: ''''	classVariableNames: ''''	poolDictionaries: ''''	category: ''Seaside-Widgets-Decorations'''!
+WAValidationNotification comment: 'WADecoration subclass: #WAWidgetDecoration	instanceVariableNames: ''''	classVariableNames: ''''	package: ''Seaside-Widgets-Decorations'''!
 !WAValidationNotification categoriesForClass!Seaside-Widgets-Decorations! !
