--- a/Seaside/WABulkReapingCacheTest.cls
+++ b/Seaside/WABulkReapingCacheTest.cls
@@ -16,7 +16,7 @@ testExpireAbsolute	"	max age: 3 sec		put 1	wait 2 sec	put 2	wait 2 sec	
 
 testExpireRelative	"	max age: 3 sec		put 1	put 2	wait 2 sec	access 1	wait 2 sec		1 should not be expired	2 should be expired"	| delay absent |	self workAroundPharo3Bug.		cache := WABulkReapingCache		initialSize: 13		maximumSize: 10		maximumAbsoluteAge: 0		maximumRelativeAge: 3		overflowAction: WAHashCache signalError.	delay := Delay forSeconds: 2.			cache at: 1 put: '1'.	cache at: 2 put: '2'.	delay wait.		cache at: 1 ifAbsent: [ self assert: false ].	delay wait.	self assert: cache reap = 1 description: 'should reap exactly one item'.		"1 should still be there"	self assert: (cache at: 1 ifAbsent: [ self assert: false ]) = '1'.		"2 should be gone"	absent := false.	cache at: 2 ifAbsent: [ absent := true ].	self assert: absent!
 
-testInitialCount	| counter |	self workAroundPharo3Bug.		counter := GRPlatform current newReducedConflictCounter.	self assert: counter value = 0.	counter increment.	self assert: counter value = 1!
+testInitialCount	| counter |	self workAroundPharo3Bug.		counter := GRPlatform current newReducedConflictCounter.	self assert: counter value equals: 0.	counter increment.	self assert: counter value equals: 1!
 
 testSendUnregistered	"	max age: 1 sec		put 1	wait 2 sec		1 should be expired and have received #unregistered"	| delay value absent |	self workAroundPharo3Bug.		cache := WABulkReapingCache		initialSize: 13		maximumSize: 10		maximumAbsoluteAge: 1		maximumRelativeAge: 0		overflowAction: WAHashCache signalError.	delay := Delay forSeconds: 2.		value := WAObjectUnderstandingUnregistered new.	self deny: value hasReceivedUnregistered.	cache at: 1 put: value.	delay wait.	self assert: cache reap = 1 description: 'should reap exactly one item'.		"1 should be gone"	absent := false.	cache at: 1 ifAbsent: [ absent := true ].	self assert: absent.		self assert: value hasReceivedUnregistered!
 
