--- a/Seaside/WAConcatenatedHtmlAttributeValue.cls
+++ b/Seaside/WAConcatenatedHtmlAttributeValue.cls
@@ -6,7 +6,7 @@ WAObject subclass: #WAConcatenatedHtmlAttributeValue
 	poolDictionaries: ''
 	classInstanceVariableNames: ''!
 WAConcatenatedHtmlAttributeValue guid: (GUID fromString: '{53b1333d-fbe3-4c20-b7f5-3ff5f99d2dc8}')!
-WAConcatenatedHtmlAttributeValue comment: ''!
+WAConcatenatedHtmlAttributeValue comment: 'I am used to represent html attribute values that can be sent separately to a brush but eventually need to be printed as a single attribute string. I was introduced to optimize html rendering where String concatentation is slow. See https://github.com/seasidest/seaside/issues/816E.g. in the following code, multiple values for ''class'' are sent to the anchor brush and they are eventually concatenated in the outputhtml anchor   class: ''mycss-strong'';   class: ''mycss-bold'';   class: ''mycss-alignright'';   with: ''some text'''!
 !WAConcatenatedHtmlAttributeValue categoriesForClass!Seaside-Core-Document! !
 !WAConcatenatedHtmlAttributeValue methodsFor!
 
