--- a/Seaside/WAMimeTypeTest.cls
+++ b/Seaside/WAMimeTypeTest.cls
@@ -18,7 +18,7 @@ testConversion	| mimeType |	mimeType := 'image/jpeg' seasideMimeType.	self as
 
 testEquals	| first second |	first := WAMimeType fromString: 'text/html'.	second := WAMimeType fromString: 'text/html'.		self assert: first = second.	self assert: first hash = second hash.		second charset: 'utf-8'.	self assert: first = second.	self assert: first hash = second hash.		first charset: 'iso-8859-1'.	self assert: first = second.	self assert: first hash = second hash.		second := WAMimeType fromString: 'text/xml'.	self deny: first = second			!
 
-testIsBinary	| notBinary binary |	notBinary := #('text/plain' 'text/bar' 'application/x-javascript' 'application/xhml+xml' 'application/xml').	notBinary do: [ :each |		| mimeType |		mimeType := WAMimeType fromString: each.		self deny: mimeType isBinary ].		binary := #('application/octet-stream' 'image/jpeg').	binary do: [ :each |		| mimeType |		mimeType := WAMimeType fromString: each.		self assert: mimeType isBinary ]!
+testIsBinary	| notBinary binary |	notBinary := #('text/plain' 'text/bar' 'application/javascript' 'application/xhml+xml' 'application/xml' 'image/svg+xml').	notBinary do: [ :each |		| mimeType |		mimeType := WAMimeType fromString: each.		self deny: mimeType isBinary ].		binary := #('application/octet-stream' 'image/jpeg').	binary do: [ :each |		| mimeType |		mimeType := WAMimeType fromString: each.		self assert: mimeType isBinary ]!
 
 testIsNonStandard	| mimeType |	mimeType := WAMimeType fromString: 'image/png'.	self deny: mimeType isNonStandard.		mimeType := WAMimeType fromString: 'image/x-icon'.	self assert: mimeType isNonStandard.		mimeType := WAMimeType fromString: 'image/X-icon'.	self assert: mimeType isNonStandard.		mimeType := WAMimeType fromString: 'x-icon/image'.	self assert: mimeType isNonStandard.		mimeType := WAMimeType fromString: 'X-icon/image'.	self assert: mimeType isNonStandard		!
 
