--- a/Seaside/WAObject.cls
+++ b/Seaside/WAObject.cls
@@ -6,7 +6,7 @@ GRObject subclass: #WAObject
 	poolDictionaries: ''
 	classInstanceVariableNames: ''!
 WAObject guid: (GUID fromString: '{ee26ad50-3c29-4ada-982d-5db365333efc}')!
-WAObject comment: 'A WAObject is the base class for all portable Seaside classes. It guarantees that #initialize is send upon object creation. Additionally it provides convenience methods for accessing the current request context, session and application.'!
+WAObject comment: 'A WAObject is the base class for all portable Seaside classes. It provides convenience methods for accessing the current request context, session and application.'!
 !WAObject categoriesForClass!Seaside-Core-Base! !
 !WAObject methodsFor!
 
