--- a/Seaside/WARenderingGuide.cls
+++ b/Seaside/WARenderingGuide.cls
@@ -6,5 +6,5 @@ WAPresenterGuide subclass: #WARenderingGuide
 	poolDictionaries: ''
 	classInstanceVariableNames: ''!
 WARenderingGuide guid: (GUID fromString: '{263d0918-c322-48a8-b1be-1feccab48bb4}')!
-WARenderingGuide comment: 'WAPainterVisitor subclass: #WATaskVisitor	instanceVariableNames: ''''	classVariableNames: ''''	poolDictionaries: ''''	category: ''Seaside-Component-Visitors'''!
+WARenderingGuide comment: 'WAPainterVisitor subclass: #WATaskVisitor	instanceVariableNames: ''''	classVariableNames: ''''	package: ''Seaside-Component-Visitors'''!
 !WARenderingGuide categoriesForClass!Seaside-Component-Visitors! !
