--- a/Seaside/WASnapshot.cls
+++ b/Seaside/WASnapshot.cls
@@ -6,7 +6,7 @@ WAObject subclass: #WASnapshot
 	poolDictionaries: ''
 	classInstanceVariableNames: ''!
 WASnapshot guid: (GUID fromString: '{ce895f3a-752c-47c7-95a2-a30101c7cb5b}')!
-WASnapshot comment: 'I represent a memory snapshot of objects. Objects can be registered by sending the message #register:. All object snapshots are updated by sending #snapshot and restored by sending #restore. To have specific snpshot and restore actions for particular classes override #snapshotCopy and #restoreFromSnapshot: in your classes.'!
+WASnapshot comment: 'I represent a memory snapshot of objects. Objects can be registered by sending the message #register:. All object snapshots are updated by sending #snapshot and restored by sending #restore. To have specific snapshot and restore actions for particular classes, override #snapshotCopy and #restoreFromSnapshot: in your classes.'!
 !WASnapshot categoriesForClass!Seaside-Core-Backtracking! !
 !WASnapshot methodsFor!
 
